# ice_detention_scraper

./: .gitignore  .lefthook.yml  .markdownlint.json  .pre-commit-config.yaml  LICENSE.txt  README.md  csv_utils.py  data_loader.py  default_data.py  enricher.py  field_offices.py  file_utils.py  main.py  pyproject.toml  schemas.py  scraper.py  utils.py
.config/: mise.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pre-commit-updates.yml
enrichers/: README.md  __init__.py  general.py  openstreetmap.py  utils.py  wikidata.py  wikipedia.py
ice_scrapers/: README.md  __init__.py  agencies.py  custom_facilities.py  facilities_scraper.py  field_offices.py  general.py  inspections.py  page_load.py  spreadsheet_load.py  utils.py  vera_data.py
schemas/: address.json  facility.json  facility_type.json  field_office.json  inspection.json  openstreetmap.json  population.json  wikidata.py  wikipedia.json
tools/: check-file-details.sh  check-file-format.sh  check-json.sh  check-merge-conflicts.sh  check-whitespace.sh  find_missing_vera.py
