[project]
name = "ice-detention-scraper"
version = "1.0.0"
description = "help identify the online profile of each ICE detention facility"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "flatdict>=4.0.1",
    "lxml>=6.0.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "ruff>=0.12.12",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-requests>=2.32.4.20250809",
]

[tool.ruff]
line-length = 120
