[project]
name = "ice-detention-scraper"
version = "1.0.0"
description = "help identify the online profile of each ICE detention facility"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "fastexcel>=0.15.1",
    "lxml>=6.0.1",
    "pdfplumber>=0.11.8",
    "polars>=1.33.0",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "thefuzz>=0.22.1",
    "xlsxwriter>=3.2.5",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-requests>=2.32.4.20250809",
]

[tool.ruff]
line-length = 120
